preparing release 0.7, switching to signals for AAT

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,3 +4,12 @@ CHANGELOG
 * 2018-03-21:
 - added assignIgnoredEventCallback() member function to API: if assigned, will be called when any ignored event occur at runtime
 
+* 2018-04-10: changes from release 0.7 (currently only in branch "add_new_transition")
+ - pass-states (aka "always active transitions", AAT) are now implemented using signaling.
+ This was neccessary because with the previous implementation, the callback of second state
+ (in case of an AAT between two states)
+ was called before the "processEvent()" of previous event was done. This was not acceptable,
+ thus, signals are now used.
+ Consequence: this is only available if the user provides or uses (more likely) the external
+ timing class, that must now also handle the signalling handling.
+
